eks-cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-api
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: python-api
  ports:
    - port: 80
      targetPort: 8000
